@@ -93,26 +93,26 @@ $cfg['Servers'][$i]['pmadb']         = '';          // Database used for Relatio
                                                     //     DEFAULT: 'phpmyadmin'
 $cfg['Servers'][$i]['bookmarktable'] = '';          // Bookmark table
                                                     //   - leave blank for no bookmark support
-                                                    //     DEFAULT: 'PMA_bookmark'
+                                                    //     DEFAULT: 'pma_bookmark'
 $cfg['Servers'][$i]['relation']      = '';          // table to describe the relation between links (see doc)
                                                     //   - leave blank for no relation-links support
-                                                    //     DEFAULT: 'PMA_relation'
+                                                    //     DEFAULT: 'pma_relation'
 $cfg['Servers'][$i]['table_info']    = '';          // table to describe the display fields
                                                     //   - leave blank for no display fields support
-                                                    //     DEFAULT: 'PMA_table_info'
+                                                    //     DEFAULT: 'pma_table_info'
 $cfg['Servers'][$i]['table_coords']  = '';          // table to describe the tables position for the PDF schema
                                                     //   - leave blank for no PDF schema support
-                                                    //     DEFAULT: 'PMA_table_coords'
+                                                    //     DEFAULT: 'pma_table_coords'
 $cfg['Servers'][$i]['pdf_pages']     = '';          // table to describe pages of relationpdf
                                                     //   - leave blank if you don't want to use this
-                                                    //     DEFAULT: 'PMA_pdf_pages'
+                                                    //     DEFAULT: 'pma_pdf_pages'
 $cfg['Servers'][$i]['column_info']   = '';          // table to store column information
                                                     //   - leave blank for no column comments/mime types
-                                                    //     DEFAULT: 'PMA_column_info'
+                                                    //     DEFAULT: 'pma_column_info'
 $cfg['Servers'][$i]['history']       = '';          // table to store SQL history
                                                     //   - leave blank for no SQL query history
-                                                    //     DEFAULT: 'PMA_history'
-$cfg['Servers'][$i]['verbose_check'] = TRUE;        // set to FALSE if you know that your PMA_* tables
+                                                    //     DEFAULT: 'pma_history'
+$cfg['Servers'][$i]['verbose_check'] = TRUE;        // set to FALSE if you know that your pma_* tables
                                                     // are up to date. This prevents compatibility
                                                     // checks and thereby increases performance.
 $cfg['Servers'][$i]['AllowDeny']['order']           // Host authentication order, leave blank to not use
@@ -135,13 +135,13 @@ $cfg['Servers'][$i]['password']        = '';
 $cfg['Servers'][$i]['only_db']         = '';
 $cfg['Servers'][$i]['verbose']         = '';
 $cfg['Servers'][$i]['pmadb']           = ''; // 'phpmyadmin' - see scripts/create_tables.sql
-$cfg['Servers'][$i]['bookmarktable']   = ''; // 'PMA_bookmark'
-$cfg['Servers'][$i]['relation']        = ''; // 'PMA_relation'
-$cfg['Servers'][$i]['table_info']      = ''; // 'PMA_table_info'
-$cfg['Servers'][$i]['table_coords']    = ''; // 'PMA_table_coords'
-$cfg['Servers'][$i]['pdf_pages']       = ''; // 'PMA_pdf_pages'
-$cfg['Servers'][$i]['column_info']     = ''; // 'PMA_column_info'
-$cfg['Servers'][$i]['history']         = ''; // 'PMA_history'
+$cfg['Servers'][$i]['bookmarktable']   = ''; // 'pma_bookmark'
+$cfg['Servers'][$i]['relation']        = ''; // 'pma_relation'
+$cfg['Servers'][$i]['table_info']      = ''; // 'pma_table_info'
+$cfg['Servers'][$i]['table_coords']    = ''; // 'pma_table_coords'
+$cfg['Servers'][$i]['pdf_pages']       = ''; // 'pma_pdf_pages'
+$cfg['Servers'][$i]['column_info']     = ''; // 'pma_column_info'
+$cfg['Servers'][$i]['history']         = ''; // 'pma_history'
 $cfg['Servers'][$i]['verbose_check']   = TRUE;
 $cfg['Servers'][$i]['AllowDeny']['order']
                                        = '';
@@ -162,13 +162,13 @@ $cfg['Servers'][$i]['password']        = '';
 $cfg['Servers'][$i]['only_db']         = '';
 $cfg['Servers'][$i]['verbose']         = '';
 $cfg['Servers'][$i]['pmadb']           = ''; // 'phpmyadmin' - see scripts/create_tables.sql
-$cfg['Servers'][$i]['bookmarktable']   = ''; // 'PMA_bookmark'
-$cfg['Servers'][$i]['relation']        = ''; // 'PMA_relation'
-$cfg['Servers'][$i]['table_info']      = ''; // 'PMA_table_info'
-$cfg['Servers'][$i]['table_coords']    = ''; // 'PMA_table_coords'
-$cfg['Servers'][$i]['pdf_pages']       = ''; // 'PMA_pdf_pages'
-$cfg['Servers'][$i]['column_info']     = ''; // 'PMA_column_info'
-$cfg['Servers'][$i]['history']         = ''; // 'PMA_history'
+$cfg['Servers'][$i]['bookmarktable']   = ''; // 'pma_bookmark'
+$cfg['Servers'][$i]['relation']        = ''; // 'pma_relation'
+$cfg['Servers'][$i]['table_info']      = ''; // 'pma_table_info'
+$cfg['Servers'][$i]['table_coords']    = ''; // 'pma_table_coords'
+$cfg['Servers'][$i]['pdf_pages']       = ''; // 'pma_pdf_pages'
+$cfg['Servers'][$i]['column_info']     = ''; // 'pma_column_info'
+$cfg['Servers'][$i]['history']         = ''; // 'pma_history'
 $cfg['Servers'][$i]['verbose_check']   = TRUE;
 $cfg['Servers'][$i]['AllowDeny']['order']
                                        = '';
