@@ -9,6 +9,8 @@ $Source$
     * libraries/export/sql.php3: Fix PMA_getTableContentOld (bug #820932).
     * left.php3: Konqueror 3 and Opera 7 works with tree view (bug #820717).
     * scripts/create-release.sh: Generate MD5 sums (RFE #748415).
+    * Documentation, config.inc.php3, scripts/create_tables.sql: Change
+      default phpMyAdmin table names from PMA_* to pma_*.
 
 2003-10-07 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/russian*: updated, thanks to Artyom Rabzonov
